--- a/build.gradle
+++ b/build.gradle
@@ -113,3 +113,7 @@ dependencies {
   ////////////////////////////////
   testImplementation 'org.springframework.boot:spring-boot-starter-test:2.3.1.RELEASE'
 }
+
+test {
+  useJUnitPlatform()
+}
