--- a/build.gradle
+++ b/build.gradle
@@ -106,12 +106,18 @@ configurations.all {
 }
 
 dependencies {
-  implementation 'org.springframework.boot:spring-boot-starter-web:2.3.1.RELEASE'
+  compileOnly 'org.springframework:spring-context:5.0.0.RELEASE'
+  compileOnly 'org.springframework:spring-web:5.0.0.RELEASE'
+  compileOnly 'javax.servlet:javax.servlet-api:3.0.1'
 
   ////////////////////////////////
   //Test Dependencies/////////////
   ////////////////////////////////
-  testImplementation 'org.springframework.boot:spring-boot-starter-test:2.3.1.RELEASE'
+  // This fulfils the SpringContex and SpringWeb 5.x.x requirement
+  // As well as the JavaXServletAPI 3.x.x requirement
+  testImplementation 'org.springframework.boot:spring-boot-starter-web:2.4.2'
+
+  testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.2'
 }
 
 test {
