--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ def s84Name = 'Standard Service'
 def s84JarName = 'standardservice'
 def s84Description = 'Exposes Health, Metric, and Liveness endpoints in a Spring service.'
 def s84GithubBase = 'https://github.com/service84-io/standard-service'
-def s84Version = '1.2.0'
+def s84Version = '1.2.1-SNAPSHOT'
 
 // configure all java components to be published
 publishing {
