--- a/build.gradle
+++ b/build.gradle
@@ -161,11 +161,14 @@ dependencies {
 
   compileOnly 'javax.servlet:servlet-api:2.2'
 
+  compileOnly 'org.slf4j:slf4j-api:1.3.0'
+
   ////////////////////////////////
   //Test Dependencies/////////////
   ////////////////////////////////
   // This fulfils the SpringContex and SpringWeb 5.x.x requirement
   // As well as the JavaXServletAPI (2.2)+ requirement
+  // As well as the SLF4J 1.3+ requirement
   testImplementation 'org.springframework.boot:spring-boot-starter-web:2.4.2'
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.2'
