Use the a unified shape build file

--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,13 @@
 // limitations under the License.
 
 plugins {
+  id 'com.diffplug.eclipse.apt' version '3.22.0'
+  // id 'org.springframework.boot' version '2.2.4.RELEASE'
+  // id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+  // id 'org.openapi.generator' version '4.2.3'
+  id 'java-library'
   id 'maven-publish'
   id 'signing'
-  id 'java-library'
   id 'eclipse'
   id 'java'
 }
@@ -144,6 +148,14 @@ project.plugins.withType(MavenPublishPlugin).all {
 
 sourceCompatibility = 11.0
 
+sourceSets {
+  main {
+    java {
+      srcDir 'gen/main/java'
+    }
+  }
+}
+
 repositories {
   jcenter()
   mavenCentral()
@@ -176,4 +188,34 @@ dependencies {
 
 test {
   useJUnitPlatform()
+}
+
+////////////////////////////////
+//Download Dependencies/////////
+////////////////////////////////
+task downloadDependencies {
+  doLast {
+    project.rootProject.allprojects.each { project ->
+      project.buildscript.configurations.each { configuration ->
+        if (configuration.canBeResolved) {
+          configuration.resolve()
+        }
+      }
+
+      project.configurations.each { configuration ->
+        if (configuration.canBeResolved) {
+          configuration.resolve()
+        }
+      }
+    }
+  }
+}
+
+////////////////////////////////
+//Generate Metamodel////////////
+////////////////////////////////
+eclipse {
+  synchronizationTasks eclipseFactorypath
+  synchronizationTasks eclipseJdt
+  synchronizationTasks eclipseJdtApt
 }
