--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ def s84Name = 'Standard Service'
 def s84JarName = 'standardservice'
 def s84Description = 'Exposes Health, Metric, and Liveness endpoints in a Spring service.'
 def s84GithubBase = 'https://github.com/service84-io/standard-service'
-def s84Version = '1.3.1-SNAPSHOT'
+def s84Version = '1.3.50-SNAPSHOT'
 
 // configure all java components to be published
 publishing {
@@ -42,8 +42,8 @@ publishing {
   repositories {
     maven {
       name = 'OSSRH'
-      def releasesURL = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
-      def snapshotsURL = 'https://oss.sonatype.org/content/repositories/snapshots'
+      def releasesURL = 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/'
+      def snapshotsURL = 'https://s01.oss.sonatype.org/content/repositories/snapshots'
       url = s84Version.endsWith('SNAPSHOT') ? snapshotsURL : releasesURL
 
       credentials {
@@ -161,7 +161,7 @@ repositories {
   jcenter()
   mavenCentral()
   maven { url 'https://plugins.gradle.org/m2/' }
-  maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+  maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
 }
 
 configurations {
