--- a/build.gradle
+++ b/build.gradle
@@ -25,12 +25,9 @@ plugins {
 apply plugin: 'eclipse'
 apply plugin: 'java'
 
+apply from: 'version.gradle'
+
 def s84Group = 'io.service84.library'
-def s84Name = 'Standard Service'
-def s84JarName = 'standardservice'
-def s84Description = 'Exposes Health, Metric, and Liveness endpoints in a Spring service.'
-def s84GithubBase = 'https://github.com/service84-io/standard-service'
-def s84Version = '1.3.50-SNAPSHOT'
 def s84CoreName = s84JarName.split('-')[0]
 
 // configure all java components to be published
