--- a/version.gradle
+++ b/version.gradle
@@ -15,6 +15,6 @@ ext {
   s84JarName = 'standardservice'
   s84Description = 'Exposes Health, Metric, and Liveness endpoints in a Spring service.'
   s84GithubBase = 'https://github.com/service84-io/standard-service'
-  s84Version = '1.3.50-SNAPSHOT'
+  s84Version = '1.3.50'
 }
 
