Use the DownloadDependency Gradle Plugin

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@
 // limitations under the License.
 
 plugins {
+  id 'io.service84.downloaddependencies' version '0.5.0'
   id 'com.diffplug.eclipse.apt' version '3.22.0'
   // id 'org.springframework.boot' version '2.2.4.RELEASE'
   // id 'io.spring.dependency-management' version '1.0.9.RELEASE'
@@ -202,27 +203,6 @@ dependencies {
 
 test {
   useJUnitPlatform()
-}
-
-////////////////////////////////
-//Download Dependencies/////////
-////////////////////////////////
-task downloadDependencies {
-  doLast {
-    project.rootProject.allprojects.each { project ->
-      project.buildscript.configurations.each { configuration ->
-        if (configuration.canBeResolved) {
-          configuration.resolve()
-        }
-      }
-
-      project.configurations.each { configuration ->
-        if (configuration.canBeResolved) {
-          configuration.resolve()
-        }
-      }
-    }
-  }
 }
 
 ////////////////////////////////
